welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {avance();marque();avance();gauche();avance();marque();recule();droite();avance();marque();avance();gauche();}
def marque() {poseBrosse();leveBrosse();}